After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662020 - libpower.so: undefined symbol: WEXITSTATUS
libpower.so: undefined symbol: WEXITSTATUS
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-17 16:52 UTC by Malcolm Lewis
Modified: 2011-10-17 17:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix-libpower.so-undefined-symbol-WEXITSTATUS-error.patch (781 bytes, patch)
2011-10-17 16:52 UTC, Malcolm Lewis
committed Details | Review

Description Malcolm Lewis 2011-10-17 16:52:51 UTC
Created attachment 199231 [details] [review]
Fix-libpower.so-undefined-symbol-WEXITSTATUS-error.patch

Hi
I get the following xsession-errors and the power icon fails to load on openSUSE 11.4 x86_64 with Gnome-Shell 3.2.0;

** (gnome-settings-daemon:12315): WARNING **: /usr/lib64/gnome-settings-daemon-3.0/libpower.so: undefined symbol: WEXITSTATUS

** (gnome-settings-daemon:12315): WARNING **: Cannot load plugin 'Power' since file '/usr/lib64/gnome-settings-daemon-3.0/libpower.so' cannot be read.

** (gnome-settings-daemon:12315): WARNING **: Error activating plugin 'Power'

It appears that sys/wait.h is missing from gsd-power-manager.c. I have provided a patch to fix the issue.
Comment 1 Bastien Nocera 2011-10-17 17:39:33 UTC
After fixing the commit message and authorship (please use your real name in commit messages), pushed!
Thanks for the patch.