power: Fix "undefined symbol: WEXITSTATUS" error.

https://bugzilla.gnome.org/show_bug.cgi?id=662020